clusters/akslab2/cluster-config/app-resources/api-portal/api-portal-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-portal
  namespace: api-portal
spec:
  routes:
    - conditions:
      - prefix: /
      services: 
        - name: api-portal
          port: 8080
  virtualhost:
    fqdn: api-portal.akslab2a.tap.fynesy.com
    tls:
      secretName: api-portal-tls-cert
